--- a/css/pkend.css
+++ b/css/pkend.css
@@ -1,310 +1,16 @@
 html,body{
-    width: 100%;
-    height: 100%;
-    background: #eeeeee
+    background: #fff;
 }
-#pkstart_top{
+#pkend_content{
     text-align: center;
-    height: 40px;
-    line-height: 40px;
-    background: #ffffff;
-    width: 100%;
-    margin-top:110px; 
+    margin-top: 50%;
 }
-#pkstart_content{
-    padding: 15px;
-    padding-bottom: 50px;
+#pkend_content img{
+    width: 130px;
 }
-
-
-
-.pk_countries{
-    text-align: center;
-    height: 50px;
-    padding-top: 17px;
-}
-.pk_countries_guoone{
-    width: 40px;
-    margin-left: 5px;
-    height: 40px;
-}
-.pk_countries_pk_img{
-    margin: 0 15px;
-    width: 18px;
-}
-.pk_countries_guotwo{
-    margin-right: 5px;
-    width: 40px;
-    height: 40px;
-}
-.pkend_bottom_text{
-    text-align: center;
-    font-size: 25px;
-}
-.pk_title{
-    display: inline-block;
-    max-width:120px;
-    overflow: hidden;
-	white-space: nowrap;
-    text-overflow: ellipsis;
-}
-.pk_countries_pk_img span{
-    display: inline-block;
-    text-align: center;
-	overflow: hidden;
-	white-space: nowrap;
-    text-overflow: ellipsis;
-    max-width: 200px;
-}
-.pk_time_img{
-    width: 14px;
-    margin-right: 2px;
-    display: inline-block;
-    position: relative;
-    top: -2px;
-}
-
-
-
-
-
-#pkstart_content_but{
-    text-align: center;
-    background: #FFFFFF;
-    height: 85px;
-    padding-top:18px; 
-}
-.row{
-    padding: 0;
-    margin: 0;
-    text-align: center;
-}
-.my_row{
-    padding-top:33px;
-}
-.progress{
-    text-align: center;
-    width: 78px;
-    height: 2px;
-    margin-top: 6px;
-    margin-left:4px;
-    margin-bottom: 0px;  
-}
-.progress-bar{
-    background-color: #ccc;
-}
-.support{
-    font-size: 12px;
-    color: #ccc
-}
-.my_media_img{
-    width: 80px;
-    text-align: center
-}
-.my_meia_titel{
-    height: 40px;
-    line-height: 40px;
+#pkend_content{
     font-size: 16px;
 }
-.my_meia_titel_line{
-    border-bottom: 1px solid #EEEEEE;
+#pkend_content_top{
+    margin: 10px 0;
 }
-.media{
-    background: #fff;
-}
-#pkstart_list{
-    margin-top: 15px;
-}
-.media{
-    margin-top: 0px;
-}
-.my_meia_titel img{
-    width: 28px;
-}
-#pkstart_footer{
-    width: 100%;
-    background: #fff;
-    margin-top: 15px;
-    padding: 0 15px;
-    padding-bottom: 15px;
-}
-
-#my_mode{
-    position: absolute;
-    z-index: 11;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    background:#000;
-    opacity: 0.3;
-    display: none;
-}
-#bet{
-    position: fixed;
-    z-index: 999999;
-    width: 100%;
-    bottom: 0px;
-    height: 220px;
-    background: #fff;
-    display: none;
-}
-#bet_titel{
-    height: 35px;
-    line-height: 35px;
-    text-align: center;
-    position: relative;
-    background: #EEEEEE;
-    margin-bottom: 10px;
-}
-#close{
-    position: absolute;
-    top:0px;
-    right: 15px;
-}
-#close img{
-    width:20px;
-}
-#bet_content{
-    padding: 0 20px;
-}
-#bet_but{
-    margin-top: 15px;
-}
-#bet_but ul{
-    width: 180px;
-    border:1px solid #ccc;
-    border-radius: 8px;
-    margin:0 auto;
-    height: 45px;
-}
-#bet_but ul li{
-    float: left;
-    height: 45px;
-    line-height: 45px;
-    width: 59px;
-    font-size: 16px;
-    text-align: center
-}
-#bet_but ul .bet_but_num{
-    border-right:1px solid #ccc;
-    border-left:1px solid #ccc 
-}
-#bet_but ul .bet_but_num input{
-    border: none;
-    width: 100%;
-    text-align: center;
-    height: 40px;
-}
-#bet_but ul li:last-child{
-    font-size: 20px;
-}
-#bet_but ul li:first-child
-{ 
-    font-size: 20px;
-}
-.my-but-style{
-    width: 85%;
-    height: 45px;
-    font-size:16px; 
-    color: #fff;
-    border-radius: 30px;
-    letter-spacing: 2px;
-    background: #2ACF82;
-}
-.progress-bar-my{
-    width: 60%;
-}
-.danqian{
-    width: 38px;
-    margin: 0 auto
-}
-.my_font_bold_num{
-    color: #ccc
-}
-.my_meia_titel_list{
-    height: 50px;
-}
-#my_submit{
-    margin-top: 15px;
-}
-#my_submit{
-    text-align: center
-}
-.my-but-style-t{
-    background: #F5F5F5;
-    border-radius: 0px;
-    width: 80px
-}
-.my_meia_titel_line_b{
-    margin-left:6px;
-    color: #ccc;
-    font-size: 13px;
-}
-.choose_type{
-    border:none;
-    background: #eeeeee;
-}
-#choose_num{
-    display: inline-block;
-    width: 10px;
-}
-.ranking_my_list {
-    height: 55px;
-    background: #fff;
-    width: 100%;
-    border-bottom: 1px solid #ccc;
-    line-height: 55px;
-}
-.row {
-    padding: 0;
-    margin: 0;
-}
-.my-text_xs_4 {
-    text-align: left
-}
-.my_top_img {
-    width: 28px;
-    height: 28px;
-    margin-right: 10px;
-    border-radius: 50%;
-}
-.my_pkend_footer_titel{
-    border-bottom: 1px solid #ccc;
-    height: 50px;
-    line-height: 50px;
-    text-indent: 15px;
-}
-#pkend_header_left .otherheader_right img{
-    display: inline-block;
-    width: 24px;
-    position: fixed;
-    right: 15px;
-    top: 22px;
-}
-.pk_countries_left{
-    display: inline-block;
-    width: 50px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    text-align: right
-}
-.pk_countries_right{
-    display: inline-block;
-    width: 50px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    text-align: left;
-
-}
-.my_col-xs-4{
-    position: relative;
-}
-.win{
-    position: absolute;
-    right: 0px;
-    top: 10px;
-    width: 21px;
-}
-
