--- a/css/ranking.css
+++ b/css/ranking.css
@@ -5,6 +5,9 @@ html,body{
     padding: 0;
     margin: 0;
 }
+.otherheader_right{
+    display: none;
+}
 #ranking_nav{
     width: 100%;
     height: 50px;
@@ -56,6 +59,7 @@ html,body{
     background: #fff;
     width: 100%;
     line-height: 70px;
+    border-bottom: 1px solid #ccc;
 }
 .my_top_img{
     width: 45px;
@@ -67,13 +71,4 @@ html,body{
 }
 #integral{
     display: none;
-}
-.my-text_xs_4{
-    padding:  0
-}
-.ranking_my_list_f{
-    margin-top: 10px;
-}
-#victory{
-    padding-bottom: 80px; 
 }
