--- a/css/goods.css
+++ b/css/goods.css
@@ -1,83 +1,44 @@
-html,body{
-    background: #fff;
-}
-.otherheader_right{
-    display: none
-}
-.my_placeholder{
-    position: relative;
-}
-.my_placeholder img{
-    display: block;
-    float: right;
-    margin-top:3px; 
-}
-.my_placeholder strong{
-    display: block;
-    color: #26C688;
-    float: right;
-}
-.my_placeholder_money{
-    font-size: 12px;
-    padding-bottom: 10px;
-    color: #888;
-}
-#my_pic{
-    height: 200px;
-    padding-top: 50px;
-    background: #eeeeee
-}
-#my_pic img{
-    height: 100%;
-    width: 100%;
-}
+﻿/* CSS banner */
+.banner { padding-top: 0px; }
+.banner, .ban_list { width: 100%; height: 220px; position: relative; overflow: hidden; background: #F1F0EF; }
+.banner .ban_list dl { position: absolute; height: 220px; }
+.banner .ban_list dl dd { height: 220px; display: block; float: left; }
+.banner .ban_list dl dd a, .banner .ban_list dl dd img { display: block; width: 100%; height: 220px; }
+.banner ul { height: 24px; line-height: 24px; width: 100%; text-align: center; position: absolute; bottom: 0; }
+.banner ul li { width: 8px; height: 8px; display: inline-block; background-image: url(../images/bannerindex_bj_of.png); background-repeat: no-repeat; background-size: 100%; margin-left: 5px; }
+.banner ul li.on { background-image: url(../images/bannerindex_bj_on.png); }
 
-.my_flex_border :after{
-    content: " ";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    height: 1px;
-    border-bottom: 1px solid #e5e5e5;
-    color: #e5e5e5;
-    -webkit-transform-origin: 0 100%;
-    transform-origin: 0 100%;
-    -webkit-transform: scaleY(0.5);
-    transform: scaleY(0.5);
-    z-index: 2;
-}
-.goods_content{
-    padding: 15px;
-    color: #888;
-    position: relative;
-}
-.line{
-    width: 100%;
-    position: relative;
-    margin-top:15px; 
-}
-.line:after{
-    content: " ";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    height: 1px;
-    border-bottom: 1px solid #e5e5e5;
-    color: #e5e5e5;
-    -webkit-transform-origin: 0 100%;
-    transform-origin: 0 100%;
-    -webkit-transform: scaleY(0.5);
-    transform: scaleY(0.5);
-    z-index: 2;  
-}
-#footer{
-    position: fixed;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    color: #fff;
-    border: 0px;
-    background: #26C688;
-}
+
+/*加减数量*/
+.wrap-num{border: 1px solid #cccccc;display: inline-block;vertical-align:middle;}
+.wrap-num-common{float: left;font-size: 14px;text-align: center;}
+.wrap-num-l{border-right: 1px solid #cccccc;color: #666;display: block;height: 28px;line-height: 28px;width: 28px;overflow: hidden;}
+.wrap-num input{color: #333;border:none;height: 27px;line-height: 27px;width: 32px;}
+.wrap-num-r{border-left: 1px solid #cccccc;color: #666;display: block;height: 28px;line-height: 28px;width: 28px;overflow: hidden;}
+
+/********属性选择********/
+.attrname span{display: inline-block;min-width: 50px;padding: 0 6px;margin-right: 2px;margin-bottom: 2px;line-height: 28px;text-align: center;cursor: pointer;border:1px solid #cccccc;}
+.attrname span.selected{border:1px solid #ff3300;background:#ff3300;color:#ffffff;}
+
+/*产品图片*/
+.productimg { position: relative; overflow: hidden; display: block; height: 220px; }
+.productimg img { width: 100%; height: 100%; }
+.productimg-desc { position: absolute; background: rgba(0, 0, 0, .5); text-align: center; color: white; z-index: 1; bottom: 0; width: 100%; height: 32px; line-height: 32px; font-size: 14px; }
+
+.detail-title{height:38px;line-height:38px;position:relative;margin:0 auto;text-align:center;}
+.detail-content img{max-width:100%;}
+
+.goods-price>em {color: #ff6600;}
+.goods-price>.sell{color:#888888;font-size:12px;position:absolute; right:8px;height:100%; line-height:1.4em;top:2px;}
+
+/*商家信息*/
+.m-seller-message { position: relative; width: 100%; }
+.m-seller-message>h3 { font-size: 18px; font-weight: 400; margin: 5px 12px; color: #333333; }
+.m-seller-message .m-seller-ta { width: 100%; border-top: 1px solid #cccccc; }
+.m-seller-message .m-seller-ta .m-seller-con { float: left; margin: 15px auto; }
+.m-seller-message .m-seller-ta .m-seller-con h1 { font-weight: 400; font-size: 16px; margin: 5px 18px 15px 18px; color: #333333; }
+.m-seller-message .m-seller-ta .m-seller-con p { font-size: 14px; margin: 5px 18px; color: #333333; }
+.m-seller-message .m-seller-ta .m-seller-phone { float: right; margin: 15px auto; border-left: 1px solid #cccccc; height: 60px; line-height: 60px; padding: 0 15px; }
+.m-seller-message .m-seller-ta .m-seller-phone img { margin: 15px auto; }
+
+
